<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Main" >

    <TextView
        android:id="@+id/key_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/key" />

    <EditText
        android:id="@+id/key"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/key_text" />

    <TextView
        android:id="@+id/url_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/key"
        android:text="@string/url" />

    <EditText
        android:id="@+id/url"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/url_text"
        android:text="@string/url_sample" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/retrieve_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/url"
        android:gravity="center" >

        <Button
            android:id="@+id/retrieve_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/url"
            android:text="@string/retrieve" />
    </LinearLayout>
    
            <TextView
        android:id="@+id/result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/retrieve_layout"
        android:textStyle="bold"
        android:text="@string/result"
         android:layout_marginTop="15dip"
        android:layout_marginBottom="15dip"/>
            
        <TextView
        android:id="@+id/result_id_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/result_text"
        android:text="@string/id" />

    <EditText
        android:id="@+id/result_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/result_id_text"
        android:enabled="false"/>
    
            <TextView
        android:id="@+id/result_url_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/result_id"
        android:text="@string/retrieved_url" />

    <EditText
        android:id="@+id/result_url"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/result_url_text"
        android:enabled="false"/>
    
                <TextView
        android:id="@+id/result_desc_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/result_url"
        android:text="@string/desc" />

    <EditText
        android:id="@+id/result_desc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/result_desc_text"
        android:enabled="false"/>

</RelativeLayout>